<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".AddTaskActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cr_ation_de_t_che"
        android:textSize="34sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titre_de_la_t_che"
        android:padding="5dp"
        app:startIconDrawable="@drawable/ic_baseline_title_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldTaskCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cat_gorie_de_la_t_che"
        android:padding="5dp"
        app:startIconDrawable="@drawable/ic_baseline_category_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/d_scription"
        android:padding="5dp"
        app:startIconDrawable="@drawable/ic_baseline_description_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldTaskPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/priorit_de_la_t_che"
        android:padding="5dp"
        app:startIconDrawable="@drawable/ic_baseline_priority_high_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textShortMessage" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/createLinearLaoyut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/custom_pink"
            android:text="@string/annuler"
            app:icon="@drawable/ic_baseline_close_24"
            app:iconGravity="textStart" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/custom_blue1"
            android:text="@string/ajouter"
            app:icon="@drawable/ic_baseline_add_circle_outline_24"
            app:iconGravity="textStart" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/editLinearLaoyut"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:visibility="invisible">

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/custom_pink"
            android:text="Supprimer"
            app:icon="@drawable/ic_baseline_delete_24"
            app:iconGravity="textStart" />

        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="Modifier"
            app:icon="@drawable/ic_baseline_edit_24"
            app:iconGravity="textStart" />
    </LinearLayout>

</LinearLayout>